VA-8718 fixed comments print on dark mode

--- a/src/components/PrintHandler/PrintHandler.scss
+++ b/src/components/PrintHandler/PrintHandler.scss
@@ -57,6 +57,7 @@
       }
       
       .print__table {
+        color: black;
         margin: 40px;
         width: calc(100% - 80px);
         border-collapse: separate !important; /*firefox border fix*/
